Finished view/edit profile mobile endpoints JKT-37
